# aif

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.web  package-lock.json  package.json
.github/workflows/: build-push.yaml
agents/: pyproject.toml  requirements.txt
agents/ai_factory_agent/: __init__.py  agent.py  config_loader.py  workflow_agents.py
agents/ai_factory_agent/tools/: account_tools.py  battlecard_tools.py  config_tools.py  content_tools.py  deliverable_tools.py  generation_tools.py  git_tools.py  infra_tools.py  model_lifecycle_tools.py  multi_customer_tools.py  portfolio_tools.py
agents/kagenti/: .env.example  Dockerfile  pyproject.toml
agents/kagenti/deployment/: k8s.yaml
agents/kagenti/src/ai_factory_kagenti/: __init__.py  agent.py  agent_builder.py  config_loader.py  configuration.py  orchestrator.py  tool_registry.py
agents/kagenti/src/ai_factory_kagenti/tools/: __init__.py  battlecard_tools.py  config_tools.py  content_tools.py  git_tools.py  infra_tools.py  metrics_tools.py  model_lifecycle_tools.py  portfolio_tools.py  state_tools.py  training_tools.py
agents/tests/: conftest.py  test_account_tools.py  test_agent_tree.py  test_battlecard_tools.py  test_deliverable_tools.py  test_infra_tools.py  test_metrics_tools.py  test_model_lifecycle_tools.py  test_multi_customer_tools.py  test_portfolio_tools.py  test_state_tools.py  test_training_tools.py
client/: index.html  package.json
client/src/: App.tsx  index.css
content/config/: a2a.yaml  agent-settings.yaml  agent-tools.yaml  (+11 more)
server/: package.json
(+213 files in other folders)
